<resources>
    <string name="app_name">ByteLover</string>
    <string name="bannerDescription">Banner</string>
    <string name="by_producer">by MoonsLab</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="try_again">Try again</string>
    <string name="server_busy">Our server might be busy!</string>
    <string name="login_to_byte_lover">Login to ByteLover</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="show_password">Show password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="banner">Banner</string>
    <string name="welcome_to_byte_lover">Welcome to ByteLover</string>
    <string name="create_account">Freshman? Create an account</string>
    <string name="recover_password">Recover password</string>
    <string name="create_an_account">Create an account</string>
    <string name="mid_dot">·</string>
    <string name="sign_up_for_byte_lover">Sign up for ByteLover</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="create_account_button">Create account</string>
    <string name="unknown_page">Unknown page</string>
    <string name="terms_message">By signing up you will agree to all our terms and policies.</string>
    <string name="privacy_policy">Privacy policies</string>
    <string name="terms_or_service">Terms or service</string>
    <string name="an_error_occurred">An error occurred!</string>
    <string name="reload">Reload</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="tos">TOS</string>
    <string name="web_security_icon">Web security icon</string>
    <string name="logging_in">Logging in…</string>
    <string name="go_back">Go back</string>
    <string name="programming_ide">Programming IDE</string>
    <string name="ide_amp_compiler_is_powered_by_programiz"><![CDATA[IDE & Compiler is powered by Programiz]]></string>
    <string name="programiz_logo">Programiz logo</string>
    <string name="ide_error_message">Make sure you have internet connection and app is up to date!</string>
    <string name="ide_starting_failed">IDE startup failed!</string>
    <string name="restart">Restart</string>
    <string name="starting_ide">Starting IDE...</string>
    <string name="maintenance_going_on">Maintenance going on</string>
    <string name="maintenance_message">Maintenance in progress. Thank you for your patience. This should be done in 5 minutes to an hour.</string>
    <string name="unknown_error_message">An unknown error occurred. We are not sure what happened, please restart app.</string>
    <string name="logo">Logo</string>
    <string name="fontawesome_user"></string>
    <string name="ide_ad_message_text">Run, edit and practice 13 languages directly from ByteLover app!</string>
    <string name="open_ide">Open IDE</string>
    <string name="course_features">Course features</string>
    <string name="live_classes_with_records">Live Classes With Records</string>
    <string name="course_feature_1_message">Online classes with HD records to review anytime!</string>
    <string name="quizzes_with_every_class">Class Quizzes</string>
    <string name="course_feature_3_message">MCQ test with each class, results given right away.</string>
    <string name="exam_every_weekend">Exam Every Weekend</string>
    <string name="course_feature_4_message">Problem solving written test taken every weekend.</string>
    <string name="_45_minute_theory_45_minute_problem_solving">Problem Solving</string>
    <string name="course_feature_message_3">Problem solving in class with the language you are learning.</string>
    <string name="_90_minutes_class">90 Min/Class</string>
    <string name="google_meet">Google meet</string>
    <string name="_45_min_class">45 Min/Class</string>
    <string name="live_ide">Live IDE</string>
    <string name="_70_min_exam">70 Min/Exam</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="student_go_to_dashboard">Student? Go to Dashboard</string>
    <string name="arrow_right"></string>
    <string name="user_icon"></string>
    <string name="course_icon"></string>
    <string name="home_icon"></string>
    <string name="magic_icon"></string>
    <string name="expand_icon"></string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="continue_text">Continue</string>
    <string name="dot_icon"></string>
    <string name="close_icon"></string>
    <string name="icon_file_shield"></string>
    <string name="icon_shield"></string>
    <string name="settings">Settings</string>
    <string name="icon_cog"></string>
    <string name="solid_messenger"></string>
    <string name="messenger">Messenger</string>
    <string name="solid_facebook"></string>
    <string name="facebook">Facebook</string>
    <string name="icon_globe"></string>
    <string name="solid_github"></string>
    <string name="dark_mode">Dark mode</string>
    <string name="icon_moon"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live">LIVE</string>
    <string name="recorded">RECORDED</string>
    <string name="title_activity_video">Video</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="class_record">Class record</string>
    <string name="failed_to_play_the_class_record">Failed to play the class record!</string>
    <string name="unknown_error_cap">UNKNOWN ERROR</string>
    <string name="exit">Exit</string>
    <string name="fa_open_book"></string>
    <string name="booking_open">Booking open</string>
    <string name="fa_live"></string>
    <string name="live_nocap">Live</string>
    <string name="course_code">Course code</string>
    <string name="level">Level</string>
    <string name="batch">Batch</string>
    <string name="slot">Slot</string>
    <string name="duration">Duration</string>
    <string name="end_date">End date</string>
    <string name="course_language">Course language</string>
    <string name="course_price">Course price</string>
    <string name="colon_space">:</string>
    <string name="fa_buy"></string>
    <string name="book_now">Book now</string>
    <string name="fa_info"></string>
    <string name="webpage">Webpage</string>
    <string name="fa_video"></string>
    <string name="recorded_nocap">Recorded</string>
    <string name="no_internet">No internet!</string>
    <string name="sorry_server_is_busy_try_again">Sorry, server is busy! Try again.</string>
    <string name="api_rejection_update_app">API rejection. Update app.</string>
    <string name="no_courses_right_now">No courses right now!</string>
    <string name="course">Course</string>
    <string name="fa_cog"></string>
    <string name="fa_task"></string>
    <string name="current_user">Current user</string>
    <string name="useremail_bytelover_com">useremail@bytelover.com</string>
    <string name="fa_dashboard"></string>
    <string name="dashboard">Dashboard</string>
    <string name="routine">Routine</string>
    <string name="fa_quiz"></string>
    <string name="fa_calendar"></string>
    <string name="assignments">Assignments</string>
    <string name="tasks">Tasks</string>
    <string name="uf46c"></string>
    <string name="marks">Marks</string>
    <string name="fa_books"></string>
    <string name="quizzes">Quizzes</string>
    <string name="today_s_class">Classes today</string>
    <string name="no_class_message">You don\'t have any class to attend today. Please go to Routine to check upcoming classes.</string>
    <string name="user_image">User image</string>
    <string name="fa_bell"></string>
    <string name="user_loading">...</string>
    <string name="loading">Loading...</string>
    <string name="fa_home"></string>
    <string name="study_materials">Study materials</string>
    <string name="class_link_will_be_available_10_minutes_before_time">Class link will be available 10 minutes before time.</string>
    <string name="will_occur_on_time">Will occur on time</string>
    <string name="no_study_materials_provided_yet">No study materials provided yet!</string>
    <string name="fa_clock"></string>
    <string name="fa_stopwatch"></string>
    <string name="fa_user_add"></string>
    <string name="join_now">Join Now</string>
    <string name="watch_class">Watch Class</string>
    <string name="video_info">Video info</string>
    <string name="close">Close</string>
    <string name="class_unknown_class">Class: Unknown class</string>
    <string name="fa_class"></string>
    <string name="course_unknown">Course: Unknown</string>
    <string name="date_unknown">Date: Unknown</string>
</resources>