<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/DashboardBody"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_lite"
    tools:context=".Dashboard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:elevation="2.5dp"
            android:background="@color/white"
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/button_settings"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_awesome_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fa_cog"
                android:textColor="@color/main"
                android:textSize="22sp" />

            <TextClock
                android:id="@+id/home_clock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/ubuntu"
                android:format12Hour="hh:mm:ss a"
                android:format24Hour="HH:mm:ss"
                android:gravity="center|left"
                android:textColor="@color/main"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="150dp" />

            <TextView
                android:id="@+id/button_videos"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="-150dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_awesome_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fa_video"
                android:textColor="@color/main"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/button_routine"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_awesome_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fa_calendar"
                android:textColor="@color/main"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/button_notifications"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_awesome_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fa_bell"
                android:textColor="@color/main"
                android:textSize="22sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_below="@id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/main_pager"
                android:layout_above="@id/bottom_nav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:padding="5dp"
                android:id="@+id/bottom_nav"
                android:elevation="2.5dp"
                android:background="@drawable/dash_nav"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:id="@+id/button_tab_main"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tab_icon_dash"
                        android:textColor="@color/main"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:fontFamily="@font/font_awesome_regular"
                        android:text="@string/fa_dashboard"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                    <TextView
                        android:id="@+id/tab_text_dash"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:textColor="@color/main"
                        android:textSize="12sp"
                        android:text="@string/dashboard"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_tab_assignments"
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tab_icon_tasks"
                        android:textColor="@color/black_light"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:fontFamily="@font/font_awesome_regular"
                        android:text="@string/fa_task"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                    <TextView
                        android:id="@+id/tab_text_tasks"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:textColor="@color/grey_text"
                        android:textSize="12sp"
                        android:text="@string/tasks"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_tab_quizzes"
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tab_icon_quizzes"
                        android:textColor="@color/black_light"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:fontFamily="@font/font_awesome_regular"
                        android:text="@string/fa_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                    <TextView
                        android:id="@+id/tab_text_quizzes"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:textColor="@color/grey_text"
                        android:textSize="12sp"
                        android:text="@string/quizzes"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_tab_marks"
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tab_icon_marks"
                        android:textColor="@color/black_light"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:fontFamily="@font/font_awesome_regular"
                        android:text="@string/uf46c"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                    <TextView
                        android:id="@+id/tab_text_marks"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:textColor="@color/grey_text"
                        android:textSize="12sp"
                        android:text="@string/marks"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_tab_courses"
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tab_icon_courses"
                        android:textColor="@color/black_light"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:fontFamily="@font/font_awesome_regular"
                        android:text="@string/fa_books"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
                    <TextView
                        android:id="@+id/tab_text_courses"
                        android:fontFamily="@font/ubuntu"
                        android:gravity="center"
                        android:textColor="@color/grey_text"
                        android:textSize="12sp"
                        android:text="@string/courses"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>