<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@android:color/white">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/morty"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="mortyCry.json"
        app:lottie_loop="true"
        tools:ignore="MissingConstraints"/>
    <TextView
        android:textStyle="bold"
        android:id="@+id/ed"
        android:layout_below="@id/morty"
        android:textColor="@color/grey_text"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/failed_to_play_the_class_record"/>
    <TextView
        android:id="@+id/error_reason"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/ed"
        android:textColor="@color/alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/unknown_error_cap"/>
    <RelativeLayout
        android:gravity="center"
        android:layout_below="@id/error_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exit"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>